; ModuleID = '/home/carl/AnghaBench/git/extr_xdiff-interface.c_xdiff_out_hunk.c'
source_filename = "/home/carl/AnghaBench/git/extr_xdiff-interface.c_xdiff_out_hunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdiff_emit_state = type { i32, i32 (i32, i64, i64, i64, i64, i8*, i64)*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [43 x i8] c"xdiff emitted hunk in the middle of a line\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i64, i64, i64, i8*, i64)* @xdiff_out_hunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xdiff_out_hunk(i8* %0, i64 %1, i64 %2, i64 %3, i64 %4, i8* %5, i64 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca %struct.xdiff_emit_state*, align 8
  store i8* %0, i8** %8, align 8
  store i64 %1, i64* %9, align 8
  store i64 %2, i64* %10, align 8
  store i64 %3, i64* %11, align 8
  store i64 %4, i64* %12, align 8
  store i8* %5, i8** %13, align 8
  store i64 %6, i64* %14, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = bitcast i8* %16 to %struct.xdiff_emit_state*
  store %struct.xdiff_emit_state* %17, %struct.xdiff_emit_state** %15, align 8
  %18 = load %struct.xdiff_emit_state*, %struct.xdiff_emit_state** %15, align 8
  %19 = getelementptr inbounds %struct.xdiff_emit_state, %struct.xdiff_emit_state* %18, i32 0, i32 2
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %7
  %24 = call i32 @BUG(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  br label %25

25:                                               ; preds = %23, %7
  %26 = load %struct.xdiff_emit_state*, %struct.xdiff_emit_state** %15, align 8
  %27 = getelementptr inbounds %struct.xdiff_emit_state, %struct.xdiff_emit_state* %26, i32 0, i32 1
  %28 = load i32 (i32, i64, i64, i64, i64, i8*, i64)*, i32 (i32, i64, i64, i64, i64, i8*, i64)** %27, align 8
  %29 = load %struct.xdiff_emit_state*, %struct.xdiff_emit_state** %15, align 8
  %30 = getelementptr inbounds %struct.xdiff_emit_state, %struct.xdiff_emit_state* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load i64, i64* %9, align 8
  %33 = load i64, i64* %10, align 8
  %34 = load i64, i64* %11, align 8
  %35 = load i64, i64* %12, align 8
  %36 = load i8*, i8** %13, align 8
  %37 = load i64, i64* %14, align 8
  %38 = call i32 %28(i32 %31, i64 %32, i64 %33, i64 %34, i64 %35, i8* %36, i64 %37)
  ret i32 0
}

declare dso_local i32 @BUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
